// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon renders a github <Icon />, color #000000, size 128 1`] = `
<styled.span
  color="#000000"
>
  <Icon
    fill="currentColor"
    icon={
      Object {
        "children": Array [
          Object {
            "attribs": Object {
              "d": "M1620 408q-67 98-162 167 1 14 1 42 0 130-38 259.5t-115.5 248.5-184.5 210.5-258 146-323 54.5q-271 0-496-145 35 4 78 4 225 0 401-138-105-2-188-64.5t-114-159.5q33 5 61 5 43 0 85-11-112-23-185.5-111.5t-73.5-205.5v-4q68 38 146 41-66-44-105-115t-39-154q0-88 44-163 121 149 294.5 238.5t371.5 99.5q-8-38-8-74 0-134 94.5-228.5t228.5-94.5q140 0 236 102 109-21 205-78-37 115-142 178 93-10 186-50z",
            },
            "name": "path",
          },
        ],
        "viewBox": "0 0 1664 1792",
      }
    }
    size={128}
  />
</styled.span>
`;

exports[`Icon renders a linkedin <Icon />, color #0077B5, size 32 1`] = `
<styled.span
  color="#0077B5"
>
  <Icon
    fill="currentColor"
    icon={
      Object {
        "children": Array [
          Object {
            "attribs": Object {
              "d": "M349 625v991h-330v-991h330zM370 319q1 73-50.5 122t-135.5 49h-2q-82 0-132-49t-50-122q0-74 51.5-122.5t134.5-48.5 133 48.5 51 122.5zM1536 1048v568h-329v-530q0-105-40.5-164.5t-126.5-59.5q-63 0-105.5 34.5t-63.5 85.5q-11 30-11 81v553h-329q2-399 2-647t-1-296l-1-48h329v144h-2q20-32 41-56t56.5-52 87-43.5 114.5-15.5q171 0 275 113.5t104 332.5z",
            },
            "name": "path",
          },
        ],
        "viewBox": "0 0 1536 1792",
      }
    }
    size={32}
  />
</styled.span>
`;

exports[`Icon renders a twitter <Icon />, color #1DA1F2, size 64 1`] = `
<styled.span
  color="#1DA1F2"
>
  <Icon
    fill="currentColor"
    icon={
      Object {
        "children": Array [
          Object {
            "attribs": Object {
              "d": "M1620 408q-67 98-162 167 1 14 1 42 0 130-38 259.5t-115.5 248.5-184.5 210.5-258 146-323 54.5q-271 0-496-145 35 4 78 4 225 0 401-138-105-2-188-64.5t-114-159.5q33 5 61 5 43 0 85-11-112-23-185.5-111.5t-73.5-205.5v-4q68 38 146 41-66-44-105-115t-39-154q0-88 44-163 121 149 294.5 238.5t371.5 99.5q-8-38-8-74 0-134 94.5-228.5t228.5-94.5q140 0 236 102 109-21 205-78-37 115-142 178 93-10 186-50z",
            },
            "name": "path",
          },
        ],
        "viewBox": "0 0 1664 1792",
      }
    }
    size={64}
  />
</styled.span>
`;
